aws-terraform/k8s/weather-app/db.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: alpha-db-statefulset
spec:
  selector:
    matchLabels:
      app: alpha-db
  serviceName: alpha-db-service
  replicas: 1
  template:
    metadata:
      labels:
        app: alpha-db
    spec:
      containers:
        - name: alpha-db
          image: devopseasylearning/apha-db:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        storageClassName: 2560-dev-del
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        dataSource:
          name: alpha-db-pv
          kind: PersistentVolumeClaim

---

apiVersion: v1
kind: Service
metadata:
  name: alpha-db-service
spec:
  selector:
    app: alpha-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
