aws-terraform/k8s/weather-app/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpha-redis
  template:
    metadata:
      labels:
        app: alpha-redis
    spec:
      containers:
        - name: alpha-redis
          image: devopseasylearning/apha-redis:latest
          imagePullPolicy: Always  # Set the image pull policy to Always
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          hostPath:
            path: /data/redis-data

---
apiVersion: v1
kind: Service
metadata:
  name: alpha-redis-service
spec:
  selector:
    app: alpha-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
