aws-terraform/k8s/weather-app/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpha-ui
  template:
    metadata:
      labels:
        app: alpha-ui
    spec:
      containers:
        - name: alpha-ui
          image: devopseasylearning/apha-ui:latest
          imagePullPolicy: Always  # Set the image pull policy to Always
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: alpha-ui-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  selector:
    app: alpha-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
