aws-terraform/k8s/weather-app/weather.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpha-weather
  template:
    metadata:
      labels:
        app: alpha-weather
    spec:
      containers:
        - name: alpha-weather
          image: devopseasylearning/apha-weather:latest
          imagePullPolicy: Always  # Set the image pull policy to Always
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: alpha-weather-service
spec:
  selector:
    app: alpha-weather
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
